Changes for 1.7
* Fixed problem where territory names that were parseable integers could not allow any territory based conditions. I still recommend territories have a non integer character in them though. (veqryn) 

* Fixed null pointer error in signalGameOver when called by a trigger for a game that has never reached the end round step. (veqryn)

* Minor adjustment to retain capital produce number methods to allow a value of zero. (flaaargle)

* Created user interface element for the User Action Delegate, based on the existing politics interface. (veqryn)

* Created new delegate, "UserActionDelegate", which will allow nations to take any kind of condition/trigger based action. (veqryn)

* Created new text file, "actionstext.properties", which contains action text for the user interface for taking user actions, similar to politicstext.properties. (veqryn)

* Added new property, "activateTrigger", to UserActionAttachment, which will fire a trigger when the nation takes this action. (veqryn)

* Added properties for conditions, conditionType, invert, chance, costPU, text, actionAccept, and attemptsPerTurn to the User Action Attachment. (veqryn)

* Created new attachment, "UserActionAttachment", which holds actions that can be taken by a player, based on an abstraction of the political action attachment. (veqryn)

* New Condition Attachment property option, "gameProperty", which can be set equal to the exact string of any boolean game property option, including custom made up ones. (veqryn)

* Created new AI specially for multiplayer free-for-all games, "Does Nothing AI", which will buy units the first round then destroy all money all subsequent rounds, along with doing nothing else. (veqryn)

* Abstracted methods to find the power and rolls of units into a single method. (veqryn)

* Fixed issue with Marine amphibious attackers showing a bonus on the battle screen even when attacking via land. (veqryn)

* Fixed null pointer error in Strong AI (Moore AI). (veqryn)
